--- a/03_サンプル/02_DogAPIで非同期処理/発展　猫/cat.html
+++ b/03_サンプル/02_DogAPIで非同期処理/発展　猫/cat.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Counter</title>
+    <title>Fetch JSON CAT</title>
   </head>
   <body>
+    <h2>猫ちゃんの登場です！</h2>
     <div>
-      <h2 id="display">0</h2>
+      <img src="" alt="おねんね中" id="dog-image" />
     </div>
-    <button id="plus-button">+1</button>
-    <!--発展問題-->
-    <button id="bai-button">×2</button>
 
-    <script src="main.js"></script>
+    <script src="cat.js"></script>
   </body>
 </html>
